--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title</title>
+    <title>Shiyuan Tian</title>
     <link rel="stylesheet" href="styles-general.css">
     <script src="js/script.js"></script>
-    <title>Document</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="assets/General/yuanFavicon.png" type="image/png">
 
 <body>
     <!-- navBar starts -->
