--- a/proj-etherealAlchemy.html
+++ b/proj-etherealAlchemy.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles-general.css">
     <link rel="stylesheet" href="styles-projectPage.css">
     <script src="js/script.js"></script>
+    <link rel="icon" href="assets/General/yuanFavicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
