--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiyuan Tian</title>
     <link rel="stylesheet" href="styles-general.css">
-    <script src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="assets/General/yuanFavicon.png" type="image/png">
+</head>
 
 <body>
     <!-- navBar starts -->
@@ -43,13 +43,73 @@
             </nav>
         </div>
     </header>
-    <!-- navBar ends-->
+    <!-- navBar ends -->
 
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- main content -->
+    <div class="main-content">
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+    </div>
+
+    <!-- footer starts -->
+    <footer class="footer">
+        <div class="footer-left">
+            <p>View other projects</p>
+        </div>
+        <div class="footer-right">
+            <div class="gallery">
+                <div class="all-content">
+                    <div class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-1">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 1">
+                                <p class="project-title">Project 1</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-2">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 2">
+                                <p class="project-title">Project 2</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-3">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 3">
+                                <p class="project-title">Project 3</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-4">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 4">
+                                <p class="project-title">Project 4</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-5">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 5">
+                                <p class="project-title">Project 5</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="projectpages/proj-name-6">
+                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 6">
+                                <p class="project-title">Project 6</p>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <button class="gallery-arrow right" onclick="nextSlide()">&#10095;</button>
+            <!-- <button class="gallery-arrow left" onclick="prevSlide()">&#10094;</button> -->
+        </div>
+    </footer>
+    <!-- footer ends -->
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
