--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!-- footer starts -->
-    <footer class="footer">
+    <footer class="footer-gallery">
         <div class="footer-left">
             <p>View other projects</p>
         </div>
@@ -107,6 +107,37 @@
             <!-- <button class="gallery-arrow left" onclick="prevSlide()">&#10094;</button> -->
         </div>
     </footer>
+
+    <footer class="footer">
+        <div class="wrapcontainer-spaceBetween">
+            <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
+                <div class="flexSize icon-container">
+                    <div class="icon">
+                        <img src="assets/General/shiyuanIcon.png" alt="Icon"
+                            style="padding-right: 10px; transform: translateY(-25%);">
+                    </div>
+                </div>
+                <div class="flexSize text-container" style="text-align: left;">
+                    <p>Copyright © 2024 Shiyuan Tian. <br> All rights reserved.</p>
+                </div>
+            </div>
+
+            <div class="wrapcontainer-flexEnd" style="align-items: flex-end;">
+                <div class="flexSize icon-container">
+                    <div class="icon">
+                        <img src="assets/icons/mail2.png" alt="Icon"
+                            style="padding-right: 10px; transform: translateY(-10%);">
+                    </div>
+                </div>
+                <div class="flexSize text-container" style="text-align: left;">
+                    <p>shiyuantian@nyu.edu</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
     <!-- footer ends -->
 
     <script src="js/script.js"></script>
