--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="wrapcontainer-flexEnd" style="align-items: flex-end;">
                 <div class="flexSize icon-container">
                     <div class="icon">
-                        <img src="assets/icons/mail2.png" alt="Icon"
+                        <img src="assets/icons/mail.png" alt="Icon"
                             style="padding-right: 10px; transform: translateY(-10%);">
                     </div>
                 </div>
