--- a/index.html
+++ b/index.html
@@ -55,59 +55,6 @@
     </div>
 
     <!-- footer starts -->
-    <footer class="footer-gallery">
-        <div class="footer-left">
-            <p>View other projects</p>
-        </div>
-        <div class="footer-right">
-            <div class="gallery">
-                <div class="all-content">
-                    <div class="gallery-container">
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-1">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 1">
-                                <p class="project-title">Project 1</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-2">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 2">
-                                <p class="project-title">Project 2</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-3">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 3">
-                                <p class="project-title">Project 3</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-4">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 4">
-                                <p class="project-title">Project 4</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-5">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 5">
-                                <p class="project-title">Project 5</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-6">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 6">
-                                <p class="project-title">Project 6</p>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <button class="gallery-arrow right" onclick="nextSlide()">&#10095;</button>
-            <!-- <button class="gallery-arrow left" onclick="prevSlide()">&#10094;</button> -->
-        </div>
-    </footer>
-
     <footer class="footer">
         <div class="wrapcontainer-spaceBetween">
             <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
@@ -121,17 +68,19 @@
                     <p>Copyright © 2024 Shiyuan Tian. <br> All rights reserved.</p>
                 </div>
             </div>
-
             <div class="wrapcontainer-flexEnd" style="align-items: flex-end;">
-                <div class="flexSize icon-container">
-                    <div class="icon">
-                        <img src="assets/icons/mail.png" alt="Icon"
-                            style="padding-right: 10px; transform: translateY(-10%);">
+                <a href="mailto:shiyuantian@nyu.edu"
+                    style="display: flex; align-items: flex-end; text-decoration: none; color: inherit;">
+                    <div class="flexSize icon-container">
+                        <div class="icon">
+                            <img src="assets/icons/mail.png" alt="Icon"
+                                style="width:25px; height: auto; padding-right: 10px; transform: translateY(-10%);">
+                        </div>
                     </div>
-                </div>
-                <div class="flexSize text-container" style="text-align: left;">
-                    <p>shiyuantian@nyu.edu</p>
-                </div>
+                    <div class="flexSize text-container" style="text-align: left;">
+                        <p>shiyuantian@nyu.edu</p>
+                    </div>
+                </a>
             </div>
         </div>
     </footer>
