--- a/index.html
+++ b/index.html
@@ -45,14 +45,20 @@
     </header>
     <!-- navBar ends -->
 
+    <!-- ========================================================================================== -->
+    <!-- ========================================================================================== -->
 
-    <!-- main content -->
+    <!-- main content starts -->
     <div class="main-content">
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     </div>
+    <!-- main content ends -->
+
+    <!-- ========================================================================================== -->
+    <!-- ========================================================================================== -->
 
     <!-- footer starts -->
     <footer class="footer">
