--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Ethereal Alchemy</title>
     <link rel="stylesheet" href="styles-general.css">
     <link rel="stylesheet" href="styles-projectPage.css">
+    <link rel="stylesheet" href="styles-profilePage.css">
     <script src="js/script.js"></script>
     <link rel="icon" href="assets/General/yuanFavicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,6 +53,18 @@
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
 
+    <div class="content-body profilePage">
+        <div class="wrapcontainer">
+            <div class="wrap2content-1">
+                <p>This is an intro paragraph about me.</p>
+            </div>
+            <div class="wrap2content-1">
+                <img src="assets/General/profilePhoto.png" alt="Profile Photo">
+                <h2>Shiyuan Tian</h2>
+                <p>Contact info: shiyuantian@nyu.edu</p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- ========================================================================================== -->
