update about page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Ethereal Alchemy</title>
     <link rel="stylesheet" href="styles-general.css">
     <link rel="stylesheet" href="styles-projectPage.css">
-    <link rel="stylesheet" href="styles-profilePage.css">
+    <link rel="stylesheet" href="styles-aboutPage.css">
     <script src="js/script.js"></script>
     <link rel="icon" href="assets/General/yuanFavicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,22 +54,65 @@
     <!-- ========================================================================================== -->
 
     <div class="content-body profilePage">
-        <div class="wrapcontainer">
-            <div class="wrap2content-1">
-                <p>This is an intro paragraph about me.</p>
-            </div>
-            <div class="wrap2content-1">
-                <img src="assets/General/profilePhoto.png" alt="Profile Photo">
-                <h2>Shiyuan Tian</h2>
-                <p>Contact info: shiyuantian@nyu.edu</p>
+        <div class="all-content">
+            <div class="wrapcontainer" style="margin-left: 60px;">
+                <div class="wrap2content-1" style="align-self: flex-end; padding-bottom: 50px">
+                    <div class="about-section">
+                        <p>
+                            I am Shiyuan Tian, a compassionate designer and creative technologist at NYU Shanghai.
+                            <br><br>
+                            I merge diverse academic backgrounds in art, computer science, marketing, and psychology.
+                            Driven by a passion for exploring cultural, spiritual, and emotional dimensions of design, I
+                            aspire to create
+                            innovative solutions that positively impact humanity's well-being through emotionally
+                            resonant experiences.
+                            <br><br>
+                            When I'm not working, you can find me dancing with friends in the dance studio or painting
+                            alone with my headphones.
+                        </p>
+                    </div>
+                </div>
+                <div class="wrap2content-1">
+                    <img class="profile-photo" src="assets/AboutPage/mypic.jpg" alt="Profile Photo">
+                    <img class="name-logo" src="assets/AboutPage/nameLogo.png" alt="Name Logo">
+
+                    <div class="contact-info">
+
+                        <a href="mailto:shiyuantian@nyu.edu" class="contact-link">
+                            <img src="assets/icons/email.png" alt="Email Icon" class="contact-icon">
+                            <span class="contact-text">shiyuantian@nyu.edu</span>
+                        </a>
+                        <br>
+                        <a href="https://www.google.com/maps/place/Beijing,+China/@39.9384151,116.0671344,10z/data=!3m1!4b1!4m6!3m5!1s0x35f05296e7142cb9:0xb9625620af0fa98a!8m2!3d39.904211!4d116.407395!16zL20vMDE5MTQ?entry=ttu"
+                            class="contact-link">
+                            <img src="assets/icons/location.png" alt="Location Icon" class="contact-icon">
+                            <span class="contact-text">BJ/SH,China; NY,US.</span>
+                        </a>
+                        <br>
+                        <a href="https://www.linkedin.com/in/shiyuan-tian-design/" class="contact-link">
+                            <img src="assets/icons/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
+                            <span class="contact-text">Shiyuan Sissy Tian</span>
+                        </a>
+                        <br>
+                        <a href="https://github.com/Sissytttt" class="contact-link">
+                            <img src="assets/icons/git.png" alt="GitHub Icon" class="contact-icon">
+                            <span class="contact-text">Sissytttt</span>
+                        </a>
+                        <br>
+                        <a href="https://www.instagram.com/sissytttt/" class="contact-link">
+                            <img src="assets/icons/ins.png" alt="Instagram Icon" class="contact-icon">
+                            <span class="contact-text">sissytttt</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-
+    <br><br>
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
-    <footer class="footer">
+    <footer class="footer-alone">
         <div class="wrapcontainer-spaceBetween">
             <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
                 <div class="flexSize icon-container">
