--- a/about.html
+++ b/about.html
@@ -61,13 +61,16 @@
                         <p>
                             I am Shiyuan Tian, a compassionate designer and creative technologist at NYU Shanghai.
                             <br><br>
-                            I merge diverse academic backgrounds in art, computer science, marketing, and psychology.
-                            Driven by a passion for exploring cultural, spiritual, and emotional dimensions of design, I
+                            I merge diverse academic backgrounds in art, computer science, marketing, and
+                            psychology.
+                            Driven by a passion for exploring cultural, spiritual, and emotional dimensions of
+                            design, I
                             aspire to create
                             innovative solutions that positively impact humanity's well-being through emotionally
                             resonant experiences.
                             <br><br>
-                            When I'm not working, you can find me dancing with friends in the dance studio or painting
+                            When I'm not working, you can find me dancing with friends in the dance studio or
+                            painting
                             alone with my headphones.
                         </p>
                     </div>
