--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <!-- main content starts -->
     <div class="main-content">
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <!-- <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> -->
     </div>
     <!-- main content ends -->
 
@@ -61,7 +61,7 @@
     <!-- ========================================================================================== -->
 
     <!-- footer starts -->
-    <footer class="footer">
+    <footer class="footer-alone">
         <div class="wrapcontainer-spaceBetween">
             <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
                 <div class="flexSize icon-container">
