--- a/proj-descendantOfTheDesert.html
+++ b/proj-descendantOfTheDesert.html
@@ -133,77 +133,11 @@
 
             <!-- section starts -->
             <div class="subSection">
-                <h2 class="subTitle">正常subsection - title</h2>
-                <h2 class="sub-subTitle">sub-subTitle</h2>
-                <p>text***</p>
-                <img src="image.jpg" alt="Image">
-            </div>
-            <!-- section ends -->
-
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-
-            <!-- section starts -->
-            <div class="subSection">
-                <h2 class="subTitle">左右两列 1:1</h2>
-                <div class="wrapcontainer">
-                    <div class="wrap2content-1">
-                        <p>text</p>
-                    </div>
-                    <div class="wrap2content-1">
-                        <img src="image.jpg" alt="Image">
-                    </div>
-                </div>
-            </div>
-            <!-- section ends -->
-
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-
-            <!-- section starts -->
-            <div class="subSection">
-                <h2 class="subTitle">左右两列 2:1</h2>
-                <div class="wrapcontainer">
-                    <div class="wrap2content-2">
-                        <img src="image.jpg" alt="Image">
-                    </div>
-                    <div class="wrap2content-1">
-                        <p>text***</p>
-                    </div>
-                </div>
-            </div>
-            <!-- section ends -->
-
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-
-            <!-- section starts -->
-            <div class="subSection">
-                <h2 class="subTitle">矩阵 2*2(宽) -> 4*1(手机)</h2>
-                <div class="wrapcontainer">
-                    <div class="wrap4content">
-                        <div style="background-color: dimgrey; width:100%; height: 200px"></div>
-                    </div>
-                    <div class="wrap4content">
-                        <div style="background-color: dimgrey; width:100%; height: 200px"></div>
-                    </div>
-                    <div class="wrap4content">
-                        <div style="background-color: dimgrey; width:100%; height: 200px"></div>
-                    </div>
-                    <div class="wrap4content">
-                        <div style="background-color: dimgrey; width:100%; height: 200px"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- section ends -->
-
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
-
-            <!-- section starts -->
-            <div class="subSection" id="section-id">
-                <h2 class="subTitle">PDF</h2>
-                <iframe class="pdf-container" src="assets"></iframe>
+                <img class="portfolioImage" src="assets/proj-desert/portfolioImage/0.jpg" alt="Image 3">
+                <img class="portfolioImage" src="assets/proj-desert/portfolioImage/1.jpg" alt="Image 3">
+                <img class="portfolioImage" src="assets/proj-desert/portfolioImage/2.jpg" alt="Image 3">
+                <img class="portfolioImage" src="assets/proj-desert/portfolioImage/3.jpg" alt="Image 3">
+                <img class="portfolioImage" src="assets/proj-desert/portfolioImage/4.jpg" alt="Image 3">
             </div>
             <!-- section ends -->
 
@@ -231,43 +165,38 @@
                 <div class="all-content">
                     <div class="gallery-container">
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-1">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 1">
-                                <p class="project-title">Project 1</p>
+                            <a href="proj-etherealAlchemy.html">
+                                <img src="assets/Projects-featuredImage/ethereal.png" alt="Project 1">
+                                <p class="gallery-project-title">Ethereal Alchemy</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-2">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 2">
-                                <p class="project-title">Project 2</p>
+                            <a href="proj-descendantOfTheDesert.html">
+                                <img src="assets/Projects-featuredImage/desert.png" alt="Project 2">
+                                <p class="gallery-project-title">Descendant Of The Desert</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-3">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 3">
-                                <p class="project-title">Project 3</p>
+                            <a href="proj-cityOfBelonging.html">
+                                <img src="assets/Projects-featuredImage/belonging.png" alt="Project 3">
+                                <p class="gallery-project-title">City Of Belonging</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-4">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 4">
-                                <p class="project-title">Project 4</p>
+                            <a href="proj-theLostLetter.html">
+                                <img src="assets/Projects-featuredImage/letter.png" alt="Project 4">
+                                <p class="gallery-project-title" style="color: rgba(0, 0, 0, 0.6);"
+                                    onmouseover="this.style.color='rgba(0, 0, 0, 0.9)'"
+                                    onmouseout="this.style.color='rgba(0, 0, 0, 0.6)'">The Lost Letter</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-5">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 5">
-                                <p class="project-title">Project 5</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-6">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 6">
-                                <p class="project-title">Project 6</p>
+                            <a href="proj-disconnect.html">
+                                <img src="assets/Projects-featuredImage/disconnect.png" alt="Project 5">
+                                <p class="gallery-project-title">Disconnect</p>
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
             <button class="gallery-arrow right" onclick="nextSlide()">&#10095;</button>
