--- a/proj-etherealAlchemy.html
+++ b/proj-etherealAlchemy.html
@@ -303,49 +303,45 @@
                 <div class="all-content">
                     <div class="gallery-container">
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-1">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 1">
-                                <p class="project-title">Project 1</p>
+                            <a href="proj-etherealAlchemy.html">
+                                <img src="assets/Projects-featuredImage/ethereal.png" alt="Project 1">
+                                <p class="gallery-project-title">Ethereal Alchemy</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-2">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 2">
-                                <p class="project-title">Project 2</p>
+                            <a href="proj-descendantOfTheDesert.html">
+                                <img src="assets/Projects-featuredImage/desert.png" alt="Project 2">
+                                <p class="gallery-project-title">Descendant Of The Desert</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-3">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 3">
-                                <p class="project-title">Project 3</p>
+                            <a href="proj-cityOfBelonging.html">
+                                <img src="assets/Projects-featuredImage/belonging.png" alt="Project 3">
+                                <p class="gallery-project-title">City Of Belonging</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-4">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 4">
-                                <p class="project-title">Project 4</p>
+                            <a href="proj-theLostLetter.html">
+                                <img src="assets/Projects-featuredImage/letter.png" alt="Project 4">
+                                <p class="gallery-project-title" style="color: rgba(0, 0, 0, 0.6);"
+                                    onmouseover="this.style.color='rgba(0, 0, 0, 0.9)'"
+                                    onmouseout="this.style.color='rgba(0, 0, 0, 0.6)'">The Lost Letter</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="projectpages/proj-name-5">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 5">
-                                <p class="project-title">Project 5</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="projectpages/proj-name-6">
-                                <img src="assets/Projects-featuredImage/feature.jpg" alt="Project 6">
-                                <p class="project-title">Project 6</p>
+                            <a href="proj-disconnect.html">
+                                <img src="assets/Projects-featuredImage/disconnect.png" alt="Project 5">
+                                <p class="gallery-project-title">Disconnect</p>
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
             <button class="gallery-arrow right" onclick="nextSlide()">&#10095;</button>
             <!-- <button class="gallery-arrow left" onclick="prevSlide()">&#10094;</button> -->
         </div>
     </footer>
+
     <footer class="footer">
         <div class="wrapcontainer-spaceBetween">
             <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
